[package]
name = "sim"
version = "0.1.0"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]

[dependencies]
rand = "*"
futures = "*"
futures-cpupool = "*"
rustc-serialize = "*"
tokio-core = "*"
rmp = "*"
rmp-serialize = "*"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
tokio-service = { git = "https://github.com/tokio-rs/tokio-service" }

[dev-dependencies]
time = "*"
