[package]
name = "sim"
version = "0.1.0"
authors = ["Francis Tseng <f+accounts@frnsys.com>"]

[dependencies]
futures = "*"
futures-cpupool = "*"
rustc-serialize = "*"
rmp = "*"
rmp-serialize = "*"
redis = "0.5.2"
uuid = { version = "0.2", features = ["v4", "rustc-serialize"] }
oppgave = "0.1.0"

[dev-dependencies]
time = "*"
